--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-    "name": "mogl-alert",
+    "name": "d2l-clone",
     "version": "0.1.0",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
     "dependencies": {
+        "@google-cloud/pubsub": "^4.0.7",
+        "@google-cloud/storage": "^7.7.0",
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "csv-writer": "^1.6.0",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "googleapis": "^129.0.0",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.9.7",
         "pg": "^8.11.3",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.35.1"
